kubernetes/auth.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: auth
  name: auth
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
  selector:
    app: auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: default
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
        service: auth
      annotations:
        consul.hashicorp.com/connect-inject: "true"
    spec:
      serviceAccountName: auth
      containers:
        - name: auth
          image: "opielapatryk/auth_eks2"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 50051
