kubernetes/kafka.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: default
  labels:
    app: kafka
spec:
  type: ClusterIP
  ports:
    - port: 9092
      targetPort: 9092
  selector:
    app: kafka
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      service: kafka
      app: kafka
  template:
    metadata:
      labels:
        service: kafka
        app: kafka
      annotations:
        consul.hashicorp.com/connect-inject: "true"
    spec:
      serviceAccountName: kafka
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9092
          volumeMounts:
            - mountPath: "/var/lib/kafka/data"
              name: "kafka-data"
      volumes:
        - name: kafka-data
          emptyDir: {}
