kubernetes/menu.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: menu
  name: menu
spec:
  type: ClusterIP
  ports:
    - port: 1027
      targetPort: 1027
  selector:
    app: menu
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menu
  namespace: default
  labels:
    app: menu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: menu
  template:
    metadata:
      labels:
        app: menu
        service: menu
      annotations:
        consul.hashicorp.com/connect-inject: "true"
    spec:
      serviceAccountName: menu
      containers:
        - name: menu
          image: "opielapatryk/menu_display_eks2"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 1027
