kubernetes/mongodb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: default
  labels:
    app: mongodb
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongodb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mongodb
      app: mongodb
  template:
    metadata:
      labels:
        service: mongodb
        app: mongodb
      annotations:
        consul.hashicorp.com/connect-inject: "true"
    spec:
      serviceAccountName: mongodb
      containers:
        - name: mongodb
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: "/var/lib/mongodb/data"
              name: "mongodata"
      volumes:
        - name: mongodata
          emptyDir: {}
