kubernetes/order-grpc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: order-grpc
  name: order-grpc
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
  selector:
    app: order-grpc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-grpc
  namespace: default
  labels:
    app: order-grpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-grpc
  template:
    metadata:
      labels:
        app: order-grpc
        service: order-grpc
      annotations:
        consul.hashicorp.com/connect-inject: "true"
    spec:
      serviceAccountName: order-grpc
      containers:
        - name: order-grpc
          image: "opielapatryk/order_service_eks7"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 50051
          command: ["sh", "-c"]
          args:
            - "python order_server.py"
