kubernetes/order-mongodb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: order-mongodb
  namespace: default
  labels:
    app: order-mongodb
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: order-mongodb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-mongodb
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      service: order-mongodb
      app: order-mongodb
  template:
    metadata:
      labels:
        service: order-mongodb
        app: order-mongodb
      annotations:
        consul.hashicorp.com/connect-inject: "true"
    spec:
      serviceAccountName: order-mongodb
      containers:
        - name: order-mongodb
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: "/var/lib/menuconfigmongodb/data"
              name: "menuconfigmongodata"
      volumes:
        - name: menuconfigmongodata
          emptyDir: {}
