kubernetes/order.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: order
  name: order
spec:
  type: ClusterIP
  ports:
    - port: 1030
      targetPort: 1030
  selector:
    app: order
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  namespace: default
  labels:
    app: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
        service: order
      annotations:
        consul.hashicorp.com/connect-inject: "true"
    spec:
      serviceAccountName: order
      containers:
        - name: order
          image: "opielapatryk/order_service_eks6"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 1030
          command: ["sh", "-c"]
          args:
            - "python run.py"
        - name: grpc-server
          image: "opielapatryk/order_service_eks6"
          imagePullPolicy: IfNotPresent
          command: ["sh", "-c"]
          args:
            - "python order_server.py"
