kubernetes/rabbitmq.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: default
  labels:
    app: rabbitmq
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 15672
    protocol: TCP
    targetPort: 15672
  - name: ampq
    port: 5672
    protocol: TCP
    targetPort: 5672
  selector:
    app: rabbitmq
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      service: rabbitmq
      app: rabbitmq
  template:
    metadata:
      labels:
        service: rabbitmq
        app: rabbitmq
      annotations:
        consul.hashicorp.com/connect-inject: "true"
        consul.hashicorp.com/transparent-proxy: "true"
        consul.hashicorp.com/transparent-proxy-exclude-inbound-ports: "15672, 5672"
        consul.hashicorp.com/transparent-proxy-exclude-outbound-ports: "15672, 5672"
    spec:
      serviceAccountName: rabbitmq
      containers:
        - name: rabbitmq
          image: rabbitmq:management
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 15672
            - containerPort: 5672
          volumeMounts:
            - mountPath: "/var/lib/rabbitmq/data"
              name: "rabbitmq-data"
      volumes:
        - name: rabbitmq-data
          emptyDir: {}
