kubernetes/routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
# HTTPRoute routes HTTP requests to backend services.
kind: HTTPRoute
metadata:
  name: http-route-1
spec:
  # Defines the gateway listener.
  parentRefs:
  - name: api-gateway
  # Rules define behaviors for network traffic that goes through the route.
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/v1/display
    - path:
        type: PathPrefix
        value: /api/v1/config
    - path:
        type: PathPrefix
        value: /login
    - path:
        type: PathPrefix
        value: /refresh-token
    - path:
        type: PathPrefix
        value: /verify-token
    # Defines the backend service.
    backendRefs:
    - kind: Service
      name: nginx
      namespace: default
      port: 80
